Fix wrapping of related metadata fields and npm update

--- a/src/css/bct.css
+++ b/src/css/bct.css
@@ -31,6 +31,10 @@
   left: -300px;
 }
 
+.bct-metadata-open .ees_assetPicker .assetChangeButton {
+    padding: 0 10px;
+}
+
 /* Bootstrap content template wrapper */
 .bct-wrapper {
   position: relative;
